--- a/ubi/src/css/form.css
+++ b/ubi/src/css/form.css
@@ -1,5 +1,6 @@
 body{
-  background-color: #DADADA;
+  /* background-color: #DADADA; */
+  background-color: white;
 }
 body > .grid {
   height: 100%;
