--- a/ubi/src/css/form.css
+++ b/ubi/src/css/form.css
@@ -5,10 +5,10 @@ body{
 body > .grid {
   height: 100%;
 }
-.image {
+#headerimage {
   margin-top: -100px;
 }
-.column {
+#form {
   max-width: 450px;
 }
 
